Added card type to domain
