# app/Domains/CardTypes/Http/Controllers/Admin/CardTypesController.php
@@ -2,68 +2,65 @@
 
 namespace Domains\CardTypes\Http\Controllers\Admin;
 
+use Domains\CardTypes\Actions\GetAllCardTypesAction;
+use Domains\CardTypes\Actions\StoreCardTypeAction;
+use Domains\CardTypes\Actions\UpdateCardTypeAction;
+use Domains\CardTypes\DataTransferObjects\CardTypeData;
+use Domains\CardTypes\Http\Requests\CreateCardTypesRequest;
+use Domains\CardTypes\Http\Requests\DeleteCardTypesRequest;
+use Domains\CardTypes\Http\Requests\EditCardTypesRequest;
+use Domains\CardTypes\Http\Requests\IndexCardTypesRequest;
+use Domains\CardTypes\Http\Requests\ShowCardTypesRequest;
 use Parents\Controllers\WebController as Controller;
 use Support\CsvImport\Traits\CsvImportTrait;
 use Domains\CardTypes\Http\Requests\MassDestroyCardTypeRequest;
 use Domains\CardTypes\Http\Requests\StoreCardTypeRequest;
 use Domains\CardTypes\Http\Requests\UpdateCardTypeRequest;
 use Domains\CardTypes\Models\CardType;
-use Gate;
-use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response;
 
 class CardTypesController extends Controller
 {
     use CsvImportTrait;
 
-    public function index(): \Illuminate\View\View
+    public function index(IndexCardTypesRequest $request, GetAllCardTypesAction $action): \Illuminate\Contracts\Foundation\Application|\Illuminate\Contracts\View\Factory|\Illuminate\Contracts\View\View
     {
-        abort_if(Gate::denies('card_type_access'), Response::HTTP_FORBIDDEN, '403 Forbidden');
-
-        $cardTypes = CardType::all();
-
-        return view('admin.cardTypes.index', compact('cardTypes'));
+        return view('admin.cardTypes.index', [
+            'viewModel' => $action()
+        ]);
     }
 
-    public function create(): \Illuminate\View\View
+    public function create(CreateCardTypesRequest $request): \Illuminate\View\View
     {
-        abort_if(Gate::denies('card_type_create'), Response::HTTP_FORBIDDEN, '403 Forbidden');
-
         return view('admin.cardTypes.create');
     }
 
-    public function store(StoreCardTypeRequest $request): \Illuminate\Http\RedirectResponse
+    public function store(StoreCardTypeRequest $request, StoreCardTypeAction $action): \Illuminate\Http\RedirectResponse
     {
-        $cardType = CardType::create($request->all());
+        $action(CardTypeData::fromRequest($request));
 
         return redirect()->route('admin.card-types.index');
     }
 
-    public function edit(CardType $cardType): \Illuminate\View\View
+    public function edit(EditCardTypesRequest $request, CardType $cardType): \Illuminate\View\View
     {
-        abort_if(Gate::denies('card_type_edit'), Response::HTTP_FORBIDDEN, '403 Forbidden');
-
         return view('admin.cardTypes.edit', compact('cardType'));
     }
 
-    public function update(UpdateCardTypeRequest $request, CardType $cardType): \Illuminate\Http\RedirectResponse
+    public function update(UpdateCardTypeRequest $request, CardType $cardType, UpdateCardTypeAction $action): \Illuminate\Http\RedirectResponse
     {
-        $cardType->update($request->all());
+        $action($cardType, CardTypeData::fromRequest($request));
 
         return redirect()->route('admin.card-types.index');
     }
 
-    public function show(CardType $cardType): \Illuminate\View\View
+    public function show(ShowCardTypesRequest $request, CardType $cardType): \Illuminate\View\View
     {
-        abort_if(Gate::denies('card_type_show'), Response::HTTP_FORBIDDEN, '403 Forbidden');
-
         return view('admin.cardTypes.show', compact('cardType'));
     }
 
-    public function destroy(CardType $cardType): \Illuminate\Http\RedirectResponse
+    public function destroy(DeleteCardTypesRequest $request, CardType $cardType): \Illuminate\Http\RedirectResponse
     {
-        abort_if(Gate::denies('card_type_delete'), Response::HTTP_FORBIDDEN, '403 Forbidden');
-
         $cardType->delete();
 
         return back();
