# app/Domains/CardTypes/Http/Requests/IndexCardTypesRequest.php
@@ -1,0 +1,26 @@
+<?php
+
+
+namespace Domains\CardTypes\Http\Requests;
+
+
+class IndexCardTypesRequest extends \Parents\Requests\Request
+{
+    /**
+     * @return  bool
+     */
+    public function authorize(): bool
+    {
+        return $this->check('card_type_access');
+    }
+
+    /**
+     * @return  array
+     */
+    public function rules(): array
+    {
+        return [
+            // put your rules here
+        ];
+    }
+}
