# app/Domains/CardTypes/Virtual/Controllers/CardTypesApiVirtual.php
@@ -1,0 +1,211 @@
+<?php
+
+
+namespace Domains\CardTypes\Virtual\Controllers;
+
+
+class CardTypesApiVirtual
+{
+    /**
+     * @OA\Get (
+     *      path="/card-types",
+     *      operationId="getCardTypesList",
+     *      tags={"CardTypes"},
+     *      summary="Get list of card types registered in system",
+     *      description="Returns list of card types",
+     *
+     * @OA\Response (
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/CardTypeResource")
+     * ),
+     * @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * @OA\Response (
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     ),
+     *
+     */
+    public function index()
+    {
+    }
+
+    /**
+     * @OA\Post (
+     *      path="/card-types",
+     *      operationId="storeCardType",
+     *      tags={"CardTypes"},
+     *      summary="Store new card type",
+     *      description="Returns card types data",
+     *
+     * @OA\RequestBody (
+     *          required=true,
+     *          @OA\JsonContent (ref="#/components/schemas/StoreCardTypeRequestVirtual")
+     *      ),
+     *
+     * @OA\Response (
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent (ref="#/components/schemas/CardTypeVirtual")
+     *   ),
+     * @OA\Response (
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     * @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * @OA\Response (
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     *
+     */
+    public function store()
+    {
+    }
+
+    /**
+     * @OA\Get (
+     *      path="/card-types/{id}",
+     *      operationId="getCardTypeById",
+     *      tags={"CardTypes"},
+     *      summary="Get card type information",
+     *      description="Returns card type data",
+     *
+     * @OA\Parameter (
+     *          name="id",
+     *          description="Card Type id",
+     *          required=true,
+     *          in="path",
+     *
+     * @OA\Schema (
+     *              type="integer"
+     *          )
+     *      ),
+     *
+     * @OA\Response (
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent (ref="#/components/schemas/CardTypeVirtual")
+     *  ),
+     * @OA\Response (
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     * @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * @OA\Response (
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     *
+     */
+    public function show()
+    {
+    }
+
+    /**
+     * @OA\Put (
+     *      path="/card-types/{id}",
+     *      operationId="updateCardType",
+     *      tags={"CardTypes"},
+     *      summary="Update existing card type",
+     *      description="Returns updated card type data",
+     *
+     * @OA\Parameter (
+     *          name="id",
+     *          description="Card Type id",
+     *          required=true,
+     *          in="path",
+     *
+     * @OA\Schema (
+     *              type="integer"
+     *          )
+     *      ),
+     *
+     * @OA\RequestBody (
+     *          required=true,
+     *          @OA\JsonContent (ref="#/components/schemas/UpdateCardTypeRequestVirtual")
+     *      ),
+     *
+     * @OA\Response (
+     *          response=202,
+     *          description="Successful operation",
+     *          @OA\JsonContent (ref="#/components/schemas/CardTypeVirtual")
+     * ),
+     * @OA\Response (
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     * @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * @OA\Response (
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     * @OA\Response (
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     *
+     */
+    public function update()
+    {
+    }
+
+    /**
+     * @OA\Delete (
+     *      path="/card-types/{id}",
+     *      operationId="deleteCardType",
+     *      tags={"CardTypes"},
+     *      summary="Delete existing card type",
+     *      description="Deletes a record and returns no content",
+     *
+     * @OA\Parameter (
+     *          name="id",
+     *          description="Card type id",
+     *          required=true,
+     *          in="path",
+     *
+     * @OA\Schema (
+     *              type="integer"
+     *          )
+     *      ),
+     *
+     * @OA\Response (
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent ()
+     *  ),
+     * @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * @OA\Response (
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     * @OA\Response (
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * ),
+     *
+     */
+    public function destroy()
+    {
+    }
+}
